<resources>
    <string name="app_name">Product-dashboard</string>
    <string name="register_label">Register</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="your_email_hint">your email</string>
    <string name="your_password_hint">your password</string>
    <string name="login_label">Login</string>
    <string name="add_label">Add</string>
    <string name="search_by_sku_hint">Search by Sku</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="unit_label">Unit</string>
    <string name="sku_label">Sku</string>
    <string name="input_sku_hint">input sku..</string>
    <string name="product_name_label">Product Name</string>
    <string name="input_product_name_hint">input product name..</string>
    <string name="quantity_label">Quantity</string>
    <string name="input_quantity_hint">input quantity..</string>
    <string name="price_label">Price</string>
    <string name="input_price_hint">input price..</string>
    <string name="input_unit_hint">input unit..</string>
    <string name="status_label">Status</string>
    <string name="input_status_hint">input status..</string>
    <string name="edit_label">Edit</string>
    <string name="delete_label">Delete</string>
</resources>