<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".presentations.dashboard.DashboardActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@null"
        android:elevation="0dp"
        app:elevation="0dp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="2"
                    android:text="@string/dashboard_label"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/login_label"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/register_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/register_label"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/search_text_by_sku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_background_white"
        android:autofillHints="name"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:inputType="text"
        android:hint="@string/search_by_sku_hint"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_dashboard" />

    <android.widget.Button
        android:id="@+id/button_add_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background_green"
        android:backgroundTint="@null"
        android:paddingHorizontal="10dp"
        android:text="@string/add_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_text_by_sku" />

    <androidx.recyclerview.widget.RecyclerView
        android:background="@color/white"
        android:id="@+id/list_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add_product"
        tools:itemCount="10"
        tools:listitem="@layout/item_products" />

</androidx.constraintlayout.widget.ConstraintLayout>