<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:elevation="2dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/item_sku_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sku_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_sku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/item_product_name_label"
            app:layout_constraintTop_toBottomOf="@id/item_sku_label"
            tools:text="1009002" />

        <TextView
            android:id="@+id/item_product_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/item_sku"
            app:layout_constraintTop_toBottomOf="@id/item_sku" />

        <TextView
            android:id="@+id/item_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Bejo Jahe Merah"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/item_product_name_label"
            app:layout_constraintTop_toBottomOf="@id/item_product_name_label" />

        <android.widget.Button
            android:id="@+id/button_edit_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background_green"
            android:backgroundTint="@null"
            android:paddingHorizontal="10dp"
            android:text="@string/edit_label"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/button_delete_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background_blue"
            android:paddingHorizontal="10dp"
            android:text="@string/delete_label"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_edit_product" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
